--- a/data/.env
+++ b/data/.env
@@ -1,3 +1,3 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=Password1234$
-POSTGRES_DB=Draft_2020
+POSTGRES_USER=docker
+POSTGRES_PASSWORD=password
+POSTGRES_DB=Draft2020
